<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cat_identifier"
        android:text="@string/default_rv_cat_id"
        android:layout_weight="1"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cat_name"
        android:text="@string/default_rv_cat_name"
        android:layout_weight="5"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cat_favorite_button"
        android:text="@string/default_rv_button_name"
        android:layout_weight="4"
        />

</LinearLayout>