<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.AboutCatFragment">

    <TextView
        android:id="@+id/cat_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_rv_cat_id"
        android:layout_margin="5dp"
        app:layout_constraintBottom_toTopOf="@id/cat_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/cat_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_rv_cat_name"
        android:layout_margin="5dp"
        app:layout_constraintTop_toBottomOf="@id/space"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/cat_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_cat_description"
        android:layout_margin="5dp"
        app:layout_constraintTop_toBottomOf="@id/cat_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Space
        android:id="@+id/space"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <ImageButton
        android:id="@+id/go_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_arrow_back_24"
        android:background="@color/white"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/go_back_button"
        />

</androidx.constraintlayout.widget.ConstraintLayout>